--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ input[type="text"] {
   border-radius: 0;
 }
 body {
-  background-color: #f5f5f5;
+  background-color: #4846c0;
   color: #4d4d4d;
   font:
     1.6rem/1.25 Arial,
@@ -76,7 +76,7 @@ body {
   margin-top: 0.4rem;
 }
 .btn {
-  border: 0.2rem solid #4d4d4d;
+  border: 0.2rem solid #111111;
   cursor: pointer;
   padding: 0.8rem 1rem 0.7rem;
   text-transform: capitalize;
@@ -149,12 +149,13 @@ body {
 /* End global styles */
 /* General app styles */
 .todoapp {
-  background: #fff;
+  background: #ffffff;
   box-shadow:
     0 2px 4px 0 rgb(0 0 0 / 20%),
     0 2.5rem 5rem 0 rgb(0 0 0 / 10%);
   margin: 2rem 0 4rem 0;
   padding: 1rem;
+  border-radius: 10px;
   position: relative;
 }
 @media screen and (min-width: 550px) {
