--- a/src/index.css
+++ b/src/index.css
@@ -190,7 +190,7 @@ body {
   padding: 2rem;
 }
 .input__lg:focus-visible {
-  border-color: #4d4d4f;
+  border-color: #4d4d4d;
   box-shadow: inset 0 0 0 2px;
 }
 [class*="__lg"] {
